--- a/src/main/resources/mustache/approvalMail.mustache
+++ b/src/main/resources/mustache/approvalMail.mustache
@@ -29,5 +29,7 @@
         <td style="padding-left:  10px;"><pre>{{{WF_MAIL_CONTENTS}}}</pre></td>
     </tr>
 </table>
+
 {{/WF_MAIL_CONTENTS}}
-<a style="margin-top: 10px;" href="{{redirectUrl}}" target="_blank">결재문서 확인</a>
+<a style="margin-top: 10px;" href="{{redirectUrl}}" target="_blank">웹 결재문서 확인</a><br>
+<!--<a style="margin-top: 10px;" href="{{redirectUrlM}}" target="_blank">모바일 결재문서 확인</a>-->
